--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
            <div class="playlist-down">
             <h3>playlist</h3>
-            <div class="plus bug6"><i class="fa-solid fa-plus"></i>crea playlist</div>
+            <div class="plus bug6"><i class="fa-solid fa-plus"></i><span>crea playlist</span></div>
 
 
             <ul class=" bug6">
