--- a/index.html
+++ b/index.html
@@ -283,9 +283,38 @@
 
        <div class="row-player flex ">
         
-       <div class="row-box bug2"></div>
-       <div class="row-box bug2"></div>
-       <div class="row-box bug2"></div>
+       <div class="row-box first flex">
+
+        <div class="col-player flex">
+          <div class="img-player">
+          <img src="./spotify/img/youg.jpeg" alt="">
+          </div>
+          <div class="name-player">
+            <h5>lana</h5>
+            <span>young & beatiful</span>
+          </div>
+        </div>
+
+        <div class="select-player flex">
+          <div><i class="fa-regular fa-heart"></i></div>
+          <div><i class="fa-regular fa-folder"></i></div>
+        </div>
+       </div>
+
+
+       <div class="row-box center bug2"></div>
+
+
+       <div class="row-box last flex ">
+         <div class=""><i class="fa-solid fa-list-ul"></i></div>
+         <div class=""><i class="fa-solid fa-display"></i></div>
+         <div class=""><i class="fa-solid fa-volume-high"></i></div>
+         <div class="bar-volume">
+          <div class="bar-volume-white">
+            <span></span>
+          </div>
+         </div>
+       </div>
        
       </div>
       </footer>
