[fixed] sidebar player box content

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
               <div class="cart-disc flex">
                 <div class="image-disc flex">
                   <img src="./spotify/img/metal_lifting.jpg" alt="metal">
+                    <i class="fa-regular fa-circle-play"></i>
                 </div>
 
                 <div class="text-disc">
@@ -140,6 +141,8 @@
               <div class="cart-disc flex">
                 <div class="image-disc flex">
                   <img src="./spotify/img/stranger.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -152,6 +155,8 @@
               <div class="cart-disc flex">
                 <div class="image-disc flex">
                   <img src="./spotify/img/aquietplace.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -164,6 +169,8 @@
               <div class="cart-disc flex">
                 <div class="image-disc flex">
                   <img src="./spotify/img/split.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -176,6 +183,8 @@
               <div class="cart-disc flex">
                 <div class="image-disc flex">
                   <img src="./spotify/img/cure.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -188,6 +197,8 @@
               <div class="cart-disc flex">
                 <div class="image-disc flex">
                   <img src="./spotify/img/sinister.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -206,6 +217,8 @@
                 <div class="image-disc flex">
 
                   <img src="./spotify/img/radar.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -221,6 +234,8 @@
                 <div class="image-disc flex">
 
                   <img src="./spotify/img/mixdaily.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -241,6 +256,8 @@
                 <div class="image-disc br-rd flex">
 
                   <img src="./spotify/img/youg.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -256,6 +273,8 @@
                 <div class="image-disc br-rd flex">
 
                   <img src="./spotify/img/einaudi.jpeg" alt="metal">
+                  <i class="fa-regular fa-circle-play"></i>
+
                 </div>
 
                 <div class="text-disc">
@@ -279,7 +298,7 @@
      
 
 
-      <footer class="player bug">
+      <footer class="player">
 
        <div class="row-player flex ">
         
@@ -301,9 +320,24 @@
         </div>
        </div>
 
-
-       <div class="row-box center bug2"></div>
-
+       <div class="row-box center">
+        <div class="row-top flex ">
+          <i class="fa-solid fa-shuffle"></i>
+          <i class="fa-solid fa-backward-step"></i>
+          <i class="fa-regular fa-circle-play"></i>
+          <i class="fa-solid fa-forward-step"></i>
+          <i class="fa-solid fa-arrow-rotate-right"></i>
+        </div>
+        <div class="row-bottom flex">
+          <span>0:25</span>
+          <div class="bar-playback-time">
+            <div class="bar-playback-white">
+              <div class="bar-playback-circle"></div>
+            </div>
+          </div>
+          <span>4:35</span>
+        </div>
+       </div>
 
        <div class="row-box last flex ">
          <div class=""><i class="fa-solid fa-list-ul"></i></div>
@@ -311,7 +345,7 @@
          <div class=""><i class="fa-solid fa-volume-high"></i></div>
          <div class="bar-volume">
           <div class="bar-volume-white">
-            <span></span>
+            <div class="bar-volume-circle"></div>
           </div>
          </div>
        </div>
